--- a/labs/lab_01/lab_01.rmd
+++ b/labs/lab_01/lab_01.rmd
@@ -25,11 +25,9 @@ When you are finished, commit changes and push to your personal GitHub repo, the
 **Task** Run the codeblock below to load the Tidyverse.To run the codeblock, hit the little green play button in the upper right corner of the gray area (the codeblock) below.
 
 ```{r}
-
-
 # Load the tidyverse. If you have not installed the tidyverse already, remove the # from the next line and run it first.  
 # install.packages('tidyverse')
-library(tidyverse)
+#library(tidyverse)
 ```
 
 ## Load Data 
@@ -46,7 +44,7 @@ wv_ppp_loans <- read_rds("lab_01.rds")
 
 **Task** Run the codeblock below to use glimpse to get a sense of the column names, types and sample data. 
 **Q1** How many rows and columns does this dataframe have?
-**A1** [write your answer here]
+**A1** Rows: 33,703 Columns: 63
 
 ```{r}
 glimpse(wv_ppp_loans)
@@ -55,33 +53,45 @@ glimpse(wv_ppp_loans)
 ## Answer questions
 
 **Q2** Which West Virginia county got the most loans? How many?
-**A2** [write your answer here]
+**A2** KANAWHA, 4332
 
 ```{r}
-# Write the code to produce your answer here
-
+wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+  summarise(
+    count_loans = n()
+  ) %>%
+  arrange(desc(count_loans))
 ```
 **Q3** Which West Virginia county got the fewest loans? How many?
-**A3** [write your answer here]
+**A3** Wirt, 36
 
 ```{r}
-# Write the code to produce your answer here
-
+wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+  summarise(
+    count_loans = n()
+  ) %>%
+  arrange(count_loans)
 ```
 **Q4** What's your best educated guess to explain why the county identified in question 2 had a lot of loans and why the county identified in question 3 had only a few loans? Hint: you won't find the answer in the data, you'll need to do some quick web research. You do not need to write any code for this question, so no codeblock is provided.  
-**A4** [write your answer here]
+**A4** The population of Kanawha is significantly higher than the population of Wirt. This could mean that there are more businesses that need funding in Kanawha due to the higher population.
 
 
 **Q5** What West Virginia business got the state's largest PPP loan? How much was it for? What does the business do? How many jobs did the loan retain, according to the data?
-**A5** [write your answer here]
+**A5** The Greenbriar Hotel Corporation got the state's largest PPP loan for 8,912,202 dollars.The business is a 5-star hotel and the loan retained 500 jobs. 
+
 
 ```{r}
-# Write the code to produce your answer here
-
+wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+  summarise(
+    count_loans = n()
+  )
 ```
 
 **Q6** What West Virginia politician (with his family) owns the company identified in question 2? What's your source for that information? Hint: this will require web research, you won't be able to answer this purely from the data set.  You do not need to write any code for this question, so no codeblock is provided.  
-**A6** [write your answer here]
+**A6** Jim Justice, the governor of West Virginia, owns the Greenbriar Hotel Corporation. My source of this information is the Office of the Governor. (https://governor.wv.gov/Pages/default.aspx)
 
 **Q7**. Produce a summary table that has the following information for West Virginia as a whole (the whole state, not by county):
 * count of loans
@@ -93,9 +103,18 @@ glimpse(wv_ppp_loans)
 
 Store it as a variable object called `wv_summary` so that you can examine it with the data viewer. What newsworthy nuggets jump out at you that you could imagine dropping into a news story? Write a few summary sentences with overall findings. 
 
-**A7** [write your answer here]
+**A7** Something that stands up to me that I could imagine dropping into a news story is the minimum loan amount versus the maximum loan amount. The range of these two pieces of data is so vast that it would make for a very interesting comparison. 
 ```{r}
-# Write the code to produce your answer here
+wv_ppp_loans %>%
+  summarise(
+    count_loans = n(),
+    total_loans_amount = sum(amount),
+    mean_loan_amount = mean(amount),
+    median_loan_amount = median(amount),
+    min_loan_amount = min(amount),
+    max_loan_amount = max(amount),
+  ) %>%
+  arrange(desc(mean_loan_amount))
 ```
 
 **Q8** Produce a summary table that has the following information for each West Virginia county:
@@ -110,7 +129,17 @@ Store it as a variable object called `wv_county_summary` so that you can examine
 
 What newsworthy nuggets or patterns jump out at you that you could imagine dropping into a news story or doing follow up reporting on? Write up a few sentence that summarizes one county. 
 
-**A8** [write your answer here]
+**A8** Something that stands out to me that I could imagine dropping into a news story is the different amounts of loans that each county was given. There is a huge difference between the amounts of loans given to each county. For example, Tyler County Versus Webster County recieved a very different amount of loans. 
 ```{r}
-# Write the code to produce your answer here
+  wv_ppp_loans %>%
+  group_by(project_county_name) %>%
+  summarise(
+    count_loans = n(),
+    total_loans_amount = sum(amount),
+    mean_loan_amount = mean(amount),
+    median_loan_amount = median(amount),
+    min_loan_amount = min(amount),
+    max_loan_amount = max(amount),
+  ) %>%
+  arrange(desc(mean_loan_amount))
 ```
