--- a/labs/lab_02/lab_02.rmd
+++ b/labs/lab_02/lab_02.rmd
@@ -47,28 +47,58 @@ west_virginia_ppp <- read_rds("lab_02.rds")
 ## Answer questions
 
 **Q1** Create a new column that divides the loan amounts into multiple options: under_10k, 10k_50k, 50k_100k, 100k_500k, 500k_1m, 1m_plus. How many loans are in each group? You will need to use `case_when` to make this work and there's an example of this in the book chapter on mutate.
-**A1** [write your answer here]
+**A1** There are 9310 loans in the under 10k group, 15306 loans in the 10k to 50k range, 3968 loans in the 50k to 100k range, 4132 loans in the 100k go 500k range, 539 loans in the 500k to 1 million group, 356 loans in the 1m plus group and 97 loans did not fall into any of these categories. 
 
 ```{r}
-# Write the code to produce your answer here
-
+west_virginia_ppp %>%
+  mutate(
+    loan_brackets = case_when(
+        amount < 10000 ~ "under_10k",
+        amount >= 10001 & amount <= 50000 ~ "10k_50k",
+        amount >= 50001 & amount <= 100000 ~ "50k_100k",
+        amount >= 100001 & amount <= 500000 ~ "100k_500k",
+        amount >= 500001 & amount <= 1000000 ~ "500k_1m",
+        amount > 1000001 & amount ~ "1m_plus",
+        
+      )
+  )%>% 
+  group_by(loan_brackets)%>%
+    summarise(
+        count_loans = n()
+    )
+  
 ```
 
+
 **Q2** Which servicing lenders have the most loans with undisbursed amounts greater than 0?
-**A2** [write your answer here]
+**A2** Harvest Small Business Finance, LLC has the most loans with undisbursed amounts greater than 0. 
 
 ```{r}
-# Write the code to produce your answer here
-
+west_virginia_ppp %>%
+  mutate(
+    greater_than_0=if_else(
+      undisbursed_amount>0, "yes", "no"
+    )
+  )%>%
+  filter(greater_than_0 == "yes") %>%
+  group_by(servicing_lender_name)%>%
+  summarise(count_undisbersed_loans = n()
+            ) %>%
+  
+  arrange(desc(count_undisbersed_loans))
 ```
 
 **Q3** How would you describe the top 10 list of those lenders? What do they have in common or not? (You may want to look up some of the top ones.)
-**A3** [write your answer here]
+**A3** Some of the top lenders are smaller banks and financial institutions that are focused in providing residential and commercial mortgages. These financial corporations are very much rooted in community initiatives and supporting specific areas instead of a large consumer base. 
 
 **Q4** Which month in 2021 had the most loans approved?
-**A4** [write your answer here]
+**A4** April had the most loans approved 
 
 ```{r}
-# Write the code to produce your answer here
-
+west_virginia_ppp %>%
+  mutate(
+    month = floor_date(date_approved, "month")) %>%
+  group_by(month) %>%
+  summarise(total = n()) %>%
+  arrange(desc(total))
 ```
