--- a/pre_labs/pre_lab_04/pre_lab_04.Rmd
+++ b/pre_labs/pre_lab_04/pre_lab_04.Rmd
@@ -29,7 +29,7 @@ library(lubridate)
 Let's say that we have county population estimates for three different years - 2010, 2015 and 2020 - in three different files. They have the same record layout and the same number of counties.
 
 **Task** Load the three CSV population estimate files. Do they have the same column structure?
-**Answer**
+**Answer** Yes, they have the same column structure. 
 
 ```{r}
 popestimate_2010 <- read_csv("data/popestimate_2010.csv")
@@ -57,7 +57,7 @@ View(estimates)
 
 ### Task 4: Loading data
 **Task** Load the Maryland PPP data and a CSV file with NAICS codes. How many rows are in maryland_ppp?
-**Answer**
+**Answer** There are 9582 rows in the Maryland PPP data. 
 
 ```{r}
 maryland_ppp <- read_rds("pre_lab_04.rds")
@@ -69,7 +69,7 @@ naics_codes <- read_csv('data/naics_codes.csv')
 
 ### Task 5: Join Them
 **Task** Run the following code to join the PPP data to the NAICS codes using the common column naics_code as the key. How many rows are there now?
-**Answer**
+**Answer** There are now 195869 rows. 
 
 ```{r}
 # with nrow included to match row total
@@ -99,8 +99,7 @@ maryland_zcta <- read_csv('data/maryland_zcta.csv')
 
 ### Task 9: Join ZCTA to PPP Data
 **Task** Join the ZCTA data to the our PPP & NAICS data. What's the error message you get? What do you think it means?
-**Answer**
-
+**Answer** The error message says, 'can't join on `x$zip` x `y$zip` because of incompatible types. ℹ `x$zip` is of type <character>>. ℹ `y$zip` is of type <double>>. I was unsure what this meant but after conducting some research I think that it means that the columns are not able to combine because the column classes do not match. One is in character type and one is a number type. 
 ```{r}
 # join on zip - but there's a problem
 maryland_ppp_with_naics_and_demographics <- maryland_ppp_with_naics %>% left_join(maryland_zcta, by=c("zip"="ZCTA5N"))
@@ -114,7 +113,7 @@ maryland_zcta <- maryland_zcta %>% mutate(across(ZCTA5N, as.character))
 
 ### Task 11: Join ZCTA to PPP Data and Check
 **Task** Join the ZCTA data to the our PPP & NAICS data. Examine the columns in the new dataframe - does every row have demographic data? HINT: Use the >> character to browse columns
-**Answer**
+**Answer** Not every row has demographic data, some say unknown for certain demographic columns. 
 
 ```{r}
 maryland_ppp_with_naics_and_demographics <- maryland_ppp_with_naics %>% left_join(maryland_zcta, by=c("zip"="ZCTA5N"))
@@ -123,7 +122,7 @@ View(maryland_ppp_with_naics_and_demographics)
 
 ### Task 12: Make a Zip5 Column, Join ZCTA to PPP Data and Check Again
 **Task** Make a zip5 column and join again. Examine the new dataframe - now does every row have demographic data?
-**Answer**
+**Answer** Yes, every row has demographic data. 
 
 ```{r}
 # make a zip5 column and redo the join
@@ -133,7 +132,7 @@ maryland_ppp_with_naics_and_demographics <- maryland_ppp_with_naics %>% left_joi
 
 ### Task 13: Asking Demographic Questions
 **Task** Find the number of PPP loans that went to ZCTAs with more than 50% non-Hispanic Black population, and calculate the average and median amounts for those loans. Put your answers below.
-**Answer**
+**Answer** There were 44032 PPP loans that went to ZCTAs with more than 50 percent non-Hispanic Black population. The average amount is 53836.46 and the median amount is 20000. . 
 
 ```{r}
 # zcta with > 50% non-Hispanic Black population
@@ -149,7 +148,7 @@ maryland_ppp_with_naics_and_demographics %>%
 ### Task 14: Asking Demographic Questions
 **Task** Find the number of PPP loans that went to ZCTAs with more than 50% non-Hispanic white population, and calculate the average and median amounts for those loans. Put your answers below.
 **Answer**
-
+There were 113937 loans that went to ZCTAs with more than 50 percent non-Hispanic white population. The average amount was	88140.24 and the median amount was	20833. 
 ```{r}
 # zcta with > 50% non-Hispanic white population
 maryland_ppp_with_naics_and_demographics %>%
@@ -162,7 +161,7 @@ maryland_ppp_with_naics_and_demographics %>%
 
 ### Task 15: Asking Demographic Questions
 **Task** Find the number of PPP loans that went to ZCTAs with more than 50% non-Hispanic Black population, grouped by rural or urban status, and calculate the average and median amounts for those loans. Put your answers below.
-**Answer**
+**Answer**In Rural areas there were	148	loans. The average amount of these wass 44328.87 and the median amount was 19621. In Urban areas, there were 43884 loans. The average amount was	53868.53 and the median amount was 20000.	
 
 ```{r}
 # zcta with > 50% non-Hispanic Black population grouped by rural/urban
@@ -177,7 +176,7 @@ maryland_ppp_with_naics_and_demographics %>%
 
 ### Task 16: Asking Demographic Questions
 **Task** Find the number of PPP loans that went to ZCTAs with more than 50% non-Hispanic white population, grouped by rural or urban status, and calculate the average and median amounts for those loans. Put your answers below.
-**Answer**
+**Answer** In rural areas, there	were 18337 loans that went to ZCTAs with more than 50 percent non-Hispanic white population with an average of 73694.14 dollars and a median of 20833	dollars. In urban areas there were 95600 loans with an average of 90911.14 dollars and a median of 20833 dollars. 
 
 ```{r}
 # zcta with > 50% non-Hispanic white population grouped by rural/urban
