--- a/labs/lab_04/lab_04.rmd
+++ b/labs/lab_04/lab_04.rmd
@@ -38,7 +38,7 @@ Let's keep working with Maryland loan applications contained in the PPP data.
 **Task** Read in the lab_04.rds file and assign it to the variable `maryland_ppp`.
 
 ```{r}
-# add code here to accomplish the task
+maryland_ppp <- read_rds("lab_04.rds")
 ```
 
 To answer the questions below, you'll need to join both the NAICS code data and the ZCTA demographic data from the book chapter. There's a particular set of steps you'll need to perform to make that work properly.
@@ -48,7 +48,7 @@ First, let's load the NAICS code CSV file we have in the data folder:
 **Task** Read in the naics_codes.csv file and assign it to the variable `naics_codes`.
 
 ```{r}
-# add code here to accomplish the task
+naics_codes <- read_csv('data/naics_codes.csv')
 ```
 
 Next join the two and then create a 5-character `zip5` column that we can use to join to the ZCTA data:
@@ -56,7 +56,8 @@ Next join the two and then create a 5-character `zip5` column that we can use to
 **Task** Write code to join the maryland_ppp and naics_codes data, assigning the result to a new variable. Then add a new `zip5` column.
 
 ```{r}
-# add code here to accomplish the task
+maryland_ppp_naics_codes <- maryland_ppp %>% left_join(naics_codes) %>%
+  mutate(zip = str_sub(zip, start = 1L, end=5L))
 ```
 
 Let's add the Zip Code Tabulation Area dataset. You'll need to make the `ZCTA5N` column a character column, not a numeric one:
@@ -64,7 +65,8 @@ Let's add the Zip Code Tabulation Area dataset. You'll need to make the `ZCTA5N`
 **Task** Read in the Zip Code Tabulation Area dataset in the data folder and change the datatype of the `ZCTA5N` column to character.
 
 ```{r}
-# add code here to accomplish the task
+maryland_zcta <- read_csv('data/maryland_zcta.csv') %>% 
+  mutate(across(ZCTA5N, as.character))
 ```
 
 Now we can join the PPP data to the ZCTA data:
@@ -72,58 +74,91 @@ Now we can join the PPP data to the ZCTA data:
 **Task** Join the Maryland PPP data (with NAICS already joined) with the ZCTA data, specifying the join column in both dataframes.
 
 ```{r}
-# add code here to accomplish the task
+maryland_ppp_naics_codes_zcta <- maryland_ppp_naics_codes %>% left_join(maryland_zcta, by=c("zip"="ZCTA5N"))
 ```
 
 ## Answer questions
 
 **Q1** What are the top 5 industries (using the NAICS title) with the most PPP applications in Maryland?
-**A1** [write your answer here]
+**A1** Taxi Service, Beauty Salons, Full-Service Restaurants, Officers of Real Estate Agents and Brokers and All Other Personal Services are the top 5 industries with the most PPP applications in Maryland. 
 
 ```{r}
-# Write the code to produce your answer here
+maryland_ppp_naics_codes_zcta %>%
+  group_by(title) %>%
+  summarize(NAICS = n()) %>%
+  arrange(desc(NAICS))
 ```
 
 **Q2** What are the top industries (using the NAICS title) with the most PPP applications in Maryland where the loan amount is more than $150,000?
-**A2** [write your answer here]
+**A2** Baywood Hotels Inc., Partners Electric Service Inc, RP3 LLC, Sushi Ko Chevy Chase LLC. and Village Academy of Maryland are the top industries with the most PPP applications in Maryland where the loan amount is more than 150,000 dollars. 
 
 ```{r}
-# Write the code to produce your answer here
+maryland_ppp_naics_codes_zcta %>%
+  group_by(title) %>%
+  filter(amount > 150000)
 
 ```
 
 **Q3** Which Maryland zip code with at least 20 percent non-Hispanic Asian population had the largest sum of PPP loans? Also show the number (count) of loans.
-**A3** [write your answer here]
+**A3** 20850 had the largest sum of PPP loans of any Maryland zip code with at least 20 percent non-Hispanic Asian population. 
 
 ```{r}
-# Write the code to produce your answer here
+maryland_ppp_naics_codes_zcta %>%
+    filter(NHA > 20) %>%
+      group_by(zip) %>%
+  summarise(
+    count = n(),
+    amount=sum(amount)
+  ) %>%
+  arrange(desc(amount))
 
 ```
 
 **Q4** Which Maryland zip code had the largest sum of loans where the reported race of the applicant was "Asian", and what is the percentage of non-Hispanic Asian population in that zip code? Also show the number (count) of loans.
-**A4** [write your answer here]
+**A4** 20850 had the largest sum of loans where the reported race of the applicant was "Asian". The percentage of non-Hispanic Asian population in that zip code was 23.5 percent.  
 
 ```{r}
-# Write the code to produce your answer here
+maryland_ppp_naics_codes_zcta %>%
+  filter(race == "Asian") %>%
+  group_by(zip) %>%
+  summarise(
+    count = n(),
+    amount=sum(amount)) %>%
+      arrange(desc(amount))
 
+maryland_ppp_naics_codes_zcta %>%
+  filter(zip == 20850) %>%
+  select(zip, PNHA) %>%
+distinct()
+  
+      
 ```
 
 **Q5** What might explain why 20850 has a significant Asian population (23.5%) and only 240 of the 3,186 loans (7.5%) are to Asian applicants?
-**A5** [write your answer here]
+**A5** Although 20850 has a significant Asian population, not all loans were distributed to Asian applicants. This is due to the racial disparities that existed within the distribution of PPP loans. 
 
 
 **Q6** Find any Maryland zip codes that have loans where the PPP data lists the applicants as being Asian but where the zip code does not appear to have Asian population in the ZCTA data? What do you think is going on here?
-**A6** [write your answer here]
+**A6** There are 3 zip codes that have loans where the PPP data lists the applicants as being Asian but where the zip code does not appear to have Asian population in the ZCTA data. This could be the result of business owners not living in the zip code of where they own a business. 
 
 ```{r}
-# Write the code to produce your answer here
 
+maryland_ppp_naics_codes_zcta %>%
+  filter(race == "Asian") %>%
+  filter(PNHA == 0) %>%
+   group_by(zip)
+  
 ```
 
 **Q7** How many industries have exactly one loan in the data (hint: you can filter _after_ using `summarise` on any totals you create). From a newsworthiness standpoint, which of these is most worthy of further exploration, and why?
-**A7** [write your answer here]
+**A7** There are 44 industries that have exactly one loan in the data. I think the ammunition and casinos are most worthy of further exploration because these are large institutions.
 
 ```{r}
-# Write the code to produce your answer here
-
+maryland_ppp_naics_codes_zcta %>%
+  group_by(title) %>%
+  summarize(count = n()) %>%
+  arrange(desc(count)) %>%
+  filter(count == 1)
+  
+  
 ```
