--- a/labs/lab_02/lab_02.rmd
+++ b/labs/lab_02/lab_02.rmd
@@ -52,21 +52,20 @@ west_virginia_ppp <- read_rds("lab_02.rds")
 ```{r}
 west_virginia_ppp %>%
   mutate(
-    loan_brackets = case_when(
-        amount < 10000 ~ "under_10k",
-        amount >= 10001 & amount <= 50000 ~ "10k_50k",
-        amount >= 50001 & amount <= 100000 ~ "50k_100k",
-        amount >= 100001 & amount <= 500000 ~ "100k_500k",
-        amount >= 500001 & amount <= 1000000 ~ "500k_1m",
-        amount > 1000001 & amount ~ "1m_plus",
-        
-      )
-  )%>% 
-  group_by(loan_brackets)%>%
-    summarise(
-        count_loans = n()
+    amount_option = case_when(
+      amount < 10000 ~ 'under_10k',
+      amount >= 10000 & amount < 50000 ~ '10k_50k',
+      amount >= 50000 & amount < 100000 ~ '50k_100k',
+      amount >= 100000 & amount < 500000 ~ '100k_500k',
+      amount >= 500000 & amount < 1000000 ~ '500k_1m',
+      amount >= 1000000 ~ '1m_plus'
     )
-  
+  ) %>%
+  group_by(amount_option) %>%
+  summarise(
+    total_loans = n()
+  ) %>%
+  arrange(desc(total_loans))
 ```
 
 
@@ -75,30 +74,25 @@ west_virginia_ppp %>%
 
 ```{r}
 west_virginia_ppp %>%
-  mutate(
-    greater_than_0=if_else(
-      undisbursed_amount>0, "yes", "no"
-    )
-  )%>%
-  filter(greater_than_0 == "yes") %>%
-  group_by(servicing_lender_name)%>%
-  summarise(count_undisbersed_loans = n()
-            ) %>%
-  
-  arrange(desc(count_undisbersed_loans))
+  filter(undisbursed_amount > 0) %>%
+  group_by(servicing_lender_name, servicing_lender_state ) %>%
+  summarise(
+    total_loans = n()
+  ) %>%
+  arrange(desc(total_loans))
 ```
 
 **Q3** How would you describe the top 10 list of those lenders? What do they have in common or not? (You may want to look up some of the top ones.)
 **A3** Some of the top lenders are smaller banks and financial institutions that are focused in providing residential and commercial mortgages. These financial corporations are very much rooted in community initiatives and supporting specific areas instead of a large consumer base. 
 
 **Q4** Which month in 2021 had the most loans approved?
-**A4** April had the most loans approved 
+**A4** April had the most loans approved. Correct answer: March 2021, with 4,404.
 
 ```{r}
 west_virginia_ppp %>%
-  mutate(
-    month = floor_date(date_approved, "month")) %>%
-  group_by(month) %>%
+  filter(date_approved > '2020-12-31') %>%
+  mutate(Month = floor_date(date_approved, "month")) %>%
+  group_by(Month) %>%
   summarise(total = n()) %>%
   arrange(desc(total))
 ```
