--- a/labs/lab_05/lab_05.rmd
+++ b/labs/lab_05/lab_05.rmd
@@ -28,8 +28,10 @@ You'll need to load two packages for this: the tidyverse and janitor.
 ```{r}
 # Turn off scientific notation
 options(scipen=999)
-
+library(tidyverse)
+library(janitor)
 ```
+
 
 ## Load Data
 
@@ -43,7 +45,15 @@ All three data sets are in the data folder.  Write code to load the three in the
 
 **Task** Create a codeblock below this task, then read the data sets in in and assign them to appropriate variable names. There's a fourth data set you'll use in this lab, too, of selected loans in ZIP Code 25401. But there's no need to load it now.
 
+```{r}
+lab_05 <- read_rds("data/lab_05.rds")
+naics_codes <- read_csv("data/naics_codes.csv")
+wv_population_county <- read_csv("data/wv_population_county.csv")
+
+```
+
 ## Answer questions
+
 
 **Q1.** In the data folder, there is a csv called zip_25401_loan_sample.csv.  It contains a sample of loans from West Virginia ZIP Code 25401. 
 
@@ -62,10 +72,20 @@ Then answer these questions:
 * How many loans are there at that street address?
 * What are the names of the businesses at that address?
 
-**A1.**
+**A1.** The street address in this data that has the most loans is 126 E. Burke St. There are 6 loans at that street address. The businesses at this address are ABRAHAM ASHTON, BRIX27, LLC, DREW HOLDINGS LLC, HUB CO-OP LLC(2 loans) and RONIN PROPERTIES LLC. 
 
 ```{r}
+zip_25401_loan_sample <- read_csv("data/zip_25401_loan_sample-csv.csv") %>%
+  group_by(address) %>%
+  summarise(
+    count=n()
+  )
 
+zip_25401_loan_sample <- read_csv("data/zip_25401_loan_sample-csv.csv") %>%
+group_by(address,name) %>%
+  summarise(
+    count=n()
+        )
 ```
 
 **Q2.** Do some web research on the businesses that answered question 1.  
@@ -74,7 +94,7 @@ Google the street address.  Google the business names and search for their corpo
 
 Based on your research, does it seem suspicious that this collection of businesses all got loans using the same address? Why or why not. Use specific facts identified in your research to support your position. 
 
-**A2.**
+**A2.** This collection of businesses all seem very suspicious as they seem as though they are all owned and run by someone by the name of Abraham Ashton. Ashton has his own law firm, which is receiving loans, and is somehow involved with all of the different companies at this address that are receiving loans. One that stands out is the Hub Co-op, which is a community work space located at 126 E. Burke Street. This could be suspicious because on the website there are no other businesses listed as having set space in The Hub. As far as the website shows, this location is it's own individual business in which people can pay to use work space. Overall, this is suspicious.
 
 **Q3.** Start by using the West Virginia slice of the PPP loan data that you loaded at the start of the lab to create a subset of PPP loans in West Virginia's second largest county (which you can find in wv_population_county). And then use that table you created to answer the following questions:
 
@@ -85,15 +105,41 @@ Requirement: you MUST export a dataframe of PPP loans from R Studio at some poin
 
 Guidance: there are a lot of steps you'll need to take to answer this question. You may or may not find it helpful to write out in English what you plan to do step-by-step before you start writing code.   
 
-**A3.**
+**A3.** Martinsburg had the highest number of loans in Berkeley. Full service restaurants had more loans than any other industry title. 
 
 ```{r}
+lab_05 %>%
+  filter(project_county_name == "BERKELEY") %>%
+write.csv("data/berkeley_loans.csv", row.names = TRUE)
+
+berkeley_loans <- read_csv("data/berkeley_loans-csv.csv")
+
+berkeley_loans %>%
+  group_by(city) %>%
+  summarise(
+    count=n()
+  ) %>%
+  arrange(desc(count))
+
+cleaned_berkeley <- read_csv("data/berkeley_loans-csv.csv")
+
+berkeley_naics <- cleaned_berkeley %>% 
+  left_join(naics_codes, by=c("naics_code"))
+
+berkeley_naics %>%
+  filter(city == "martinsburg") %>%
+    group_by(title) %>%
+      summarise(
+    count=n()
+  ) %>%
+  arrange(desc(count))
+
 
 ```
 
 **Q4.** What are your two best hypotheses, which you'd need to confirm with reporting and further analysis, that explain why that industry is at the top of the list?
 
-**A4.** 
+**A4.** One hypothesis of why full service restaurants are at the top of the loan list is because of the pandemic, these restaurants had the most trouble making money due to government shut downs. Another hypothesis is that Martinsburg has a lot of full-service restaurants. After further research I found that Martinsburg has a plethora of different full-service restaurants.
 
 **Q5.** Start with a table of loans to all businesses in the city and industry that answered question 3. Answer the following questions:
 * What is the name of the business that got the highest approved loan amount? 
@@ -106,4 +152,11 @@ Guidance: there are a lot of steps you'll need to take to answer this question. 
 
 Hint: you will not find the answers to the last three questions in the data.  You could call them directly to get that information, but I don't want you to do that for this assignment.  Instead, do some web research. I would start by Googling the company name from the data and looking at the page that comes up for the business from at http://apps.sos.wv.gov/. I would use information I found on that page and use info about the company from Google, the [Wayback machine](https://archive.org/web/) (which lets you look at older versions of a company's website), Yelp, and Facebook. 
 
-**A5.**
+**A5.** LAST RESORT LOUNGE LLC was the business that got the highest approved loan amount. It was for 46795.00. It was approved on February 24, 2021. There were 19 jobs retained. The customers know this business as VIP Lounge. This business has two locations. There was a third location that closed during the pandemic. 
+```{r}
+berkeley_naics %>%
+  filter(city == "martinsburg" ) %>%
+  filter(title == "Full-Service Restaurants")
+
+
+```
