--- a/labs/lab_06/lab_06.rmd
+++ b/labs/lab_06/lab_06.rmd
@@ -53,7 +53,7 @@ Let's load it into R, and in doing so we'll skip the first two rows and add our 
 **Task** Write code to read the CSV file into a dataframe called `international_migration`. As in the pre_lab, you may have to skip 1 or more rows and you may want to supply easier to use column names that use underscores.
 
 ```{r}
-# Write the code to load the CSV file here
+international_migration <- read_csv("data/tabula-md-statistical-handbook.csv", skip=2, col_names=c("Name", "July_2010", "July_2011", "July_2012", "July_2013", "July_2014", "July_2015", "July_2016", "July_2017", "July_2018", "Total"))
 ```
 
 Add a column for the type of migration ("international") and populate it:
@@ -61,33 +61,31 @@ Add a column for the type of migration ("international") and populate it:
 **Task** Write the code to add a `migration_type` column to the data and give it the value of "international"
 
 ```{r}
-# Write the code to add the column here
+international_migration <- international_migration %>% mutate(migration_type="international")
 ```
 
 ## Answer questions
 
 **Q1** Which region and county/city _below_ the state level accounted for the largest percentage of international migration for the entire time period? You'll need to add and populate a column representing percent of total using `mutate`.
-**A1** [write your answer here]
+**A1** The Suburban Washington Region has the largest percentage of international migration for the entire time period (63%). Montgomery County is hte count that accounted for the largest percentage of international migration for the entire time period (37%). 
 
 ```{r}
-# Write the code to produce your answer here
+international_migration <- international_migration %>% mutate(percent_of_total=Total / 198996)
 
 ```
 
 **Q2** Write a sentence or two that describes the data you produced in A1. Try to convey the most important idea.
-**A2** [write your answer here]
+**A2** The data I produced in A1 is a column for percent of total that calculates the region/county/city percentages of international migration. I divided each total by the entire state of Maryland total to calculate this average in my code.
 
 **Q3** Which region & jurisdiction had the largest percentage change (either negative or positive) for international migration between July 2018 and July 2017? The formula for percentage change is easy to remember: (New-Old)/Old.
-**A3** [write your answer here]
+**A3** Cecil County had the largest percentage change (negative) for international migration between July 2018 and July 2017 (-127%). 
 
 ```{r}
-# Write the code to produce your answer here
-
+international_migration <- international_migration %>% mutate(percentage_change =(July_2018-July_2017) / July_2017)
 ```
 
 **Q4** What's your best guess as to why these changes occurred, and in those places in particular?
-**A4** [write your answer here]
-
+**A4** My best guess as to why these changes occurred in certain places is that there have been significant changes in legislation against immigration nationally (Donald).
 
 ## Back to Tabula
 
@@ -102,7 +100,8 @@ Let's load it into R, and in doing so we'll skip the first two rows and add our 
 **Task** Write code to read the CSV file into a dataframe called `domestic_migration`. As in the pre_lab, you may have to skip 1 or more rows and you may want to supply easier to use column names that use underscores. Your work on the international file should serve as a guide.
 
 ```{r}
-# Write the code to load the CSV file here
+domestic_migration <- read_csv("data/tabula-md-statistical-handbook-domestic.csv", skip=2, col_names=c("Name", "July_2010", "July_2011", "July_2012", "July_2013", "July_2014", "July_2015", "July_2016", "July_2017", "July_2018", "Total"))
+```
 ```
 
 Add a column for the type of migration ("domestic") and populate it:
@@ -110,25 +109,24 @@ Add a column for the type of migration ("domestic") and populate it:
 **Task** Write the code to add a `migration_type` column to the data and populate it with the value of "domestic"
 
 ```{r}
-# Write the code to add the column here
+domestic_migration <- domestic_migration %>% mutate(migration_type="domestic")
 ```
 
 ## Answer questions
 **Q5** Which Maryland individual jurisdiction saw the largest net decrease in domestic migration overall?
-**A5** [write your answer here]
+**A5** Baltimore City saw the largest net decrease in domestic migration overall (-62834).
 
 ```{r}
-# Write the code to produce your answer here
-
+domestic_migration <- domestic_migration %>% arrange(Total)
 ```
 
 **Q6** How many regions & jurisdictions had net positive migration for July 2017, July 2018 and July 2019 (not just individually but all three together)?
-**A6** [write your answer here]
+**A6** 2 Regions and 12 jurisdiction had net positive migration for July 2018, July 2018 and July 2019. 
 
 ```{r}
-# Write the code to produce your answer here
-
+domestic_migration <- domestic_migration %>% 
+filter(July_2016 > 0 & July_2017 > 0  & July_2018 > 0)
 ```
 
 **Q7** How would you describe this data? Is there a county or region that stands out, and why?
-**A7** [write your answer here]
+**A7** This data shows a wide variety of change over time in migration, representing the complexity of different regional data. Howard County, Charles County and Worcester County stood out to me, as they had net positive migration the entire time. 
