--- a/major_assignments/reverse_engineering/reverse_engineering_template.Rmd
+++ b/major_assignments/reverse_engineering/reverse_engineering_template.Rmd
@@ -28,7 +28,10 @@ Loading required libraries for this analysis.
 options(scipen=999)
 library(tidyverse)
 library(lubridate)
-library(janitor)
+
+install.packages("readxl")
+
+library(readxl)
 ```
 
 ## Load and Cleaning Data
@@ -42,7 +45,6 @@ In this section, describe the source of the data, write a basic data dictionary 
 
 # Clean required data and prepare for analysis if needed. 
 allegations <- read_csv("data/allegations_202007271729.csv")
-allegations <- readx("data/CCRB Data Layout Table.xls")
 allegations <- read_csv("data/CCRB-Complaint-Data_202007271729.csv")
 
 
@@ -55,13 +57,17 @@ In this notebook, we are reverse engineering five sentences from the story.
 
 * **Sentence text**: “A dozen of those high-ranking officers have three or more complaints with substantiated allegations; 10 are white. Five have reached the rank of deputy inspector, the lowest promoted at the commissioner’s discretion; all are white.”
 
-* **Analysis summary**: [Write up two to three sentences describing the results of your analysis.  Were you able to confirm the finding? If not, why not?]
+* **Analysis summary**: We used code to filter out the specific data woven throughout this sentence("substantiated allegations", "10 are white", "rank of deputy inspector"). This allowed us to narrow down our data and determine how the data was organized for analysis in this article. This narrowed our code to reutrning 69 rows of information. 
 
 ```{r}
 allegations %>%
-  filter(mos_ethnicity == "White") %>%
-  filter(rank_now == "Deputy Inspector" ) %>%
-  group_by(mos_ethnicity)
+  filter(mos_ethnicity == "White" ) %>%
+  filter(rank_now == "Deputy Inspector") %>%
+  filter(board_disposition == "Substantiated (Command Lvl Instructions)" | board_disposition == "Substantiated (Charges)" | board_disposition == "Substantiated (Command Discipline A)" | board_disposition == "Substantiated (Formalized Training)" | board_disposition == "Substantiated (Command Discipline B)" | board_disposition == "Substantiated (Instructions)" | board_disposition == "Substantiated (Command Discipline)" | board_disposition == "Substantiated (Command Discipline)") %>%
+group_by(unique_mos_id, first_name, last_name, rank_now, mos_ethnicity) %>%
+summarize(
+count = n()) %>%
+arrange(desc(count))
 
 ```
 
