--- a/major_assignments/reverse_engineering/reverse_engineering_template.Rmd
+++ b/major_assignments/reverse_engineering/reverse_engineering_template.Rmd
@@ -56,7 +56,9 @@ In this notebook, we are reverse engineering five sentences from the story.
 
 * **Sentence text**: “A dozen of those high-ranking officers have three or more complaints with substantiated allegations; 10 are white. Five have reached the rank of deputy inspector, the lowest promoted at the commissioner’s discretion; all are white.”
 
-* **Analysis summary**: We used code to filter out the specific data woven throughout this sentence("substantiated allegations", "10 are white", "rank of deputy inspector"), which allowed us to narrow down and determine how the data was organized for analysis in this article. We initially narrowed our code by filtering by ethnicity which returned 69 rows of information. We then determined that we needed to further narrow the data by 'rank_now' and 'board_disposition', which enabled us to confirm the finding and successfully reverse engineer our first section of this story.
+* **Analysis summary**: We used code to filter out the specific data woven throughout this sentence("substantiated allegations", "10 are white", "rank of deputy inspector"), which allowed us to narrow down and determine how the data was organized for analysis in this article. We initially narrowed our code by filtering by ethnicity which returned 69 rows of information. We then determined that we needed to further narrow the data by 'rank_now' and 'board_disposition'. We learned that our data has been updated by ProPublica, leading to a slight skew in our numbers versus those in the article (25 total (3 allegations, 17 who were white, 1 Hispanic officer who held the title of Deputy Inspector)). 
+
+We got 25 total >3 allegations, 17 who were white, and there was 1 Hispanic officer who held the title of Deputy Inspector
 
 ```{r}
 allegations %>%
