--- a/pre_labs/pre_lab_08/pre_lab_08.Rmd
+++ b/pre_labs/pre_lab_08/pre_lab_08.Rmd
@@ -102,8 +102,7 @@ alldata <- p00 %>% inner_join(p10)
 And now we calculate the percent change.
 
 **Task** Run the following codeblock to calculate the percentage change and put the state with the largest percentage growth below.
-**Answer**
-
+**Answer** Nevada had the largest percentage growth which was 35.15%. 
 
 ```{r}
 alldata %>% mutate(change = ((Population2010-Population2000)/Population2000)*100) %>% arrange(desc(change))
@@ -122,7 +121,7 @@ We can measure this by median household income. That variable is `B19013_001`, s
 ### Task 5: Answer Questions with ACS Data
 
 **Task** Run the following codeblock to find the Maryland county with the highest median household income and put the answer below.
-**Answer**
+**Answer** Howard County is the county with the highest median household income. 
 
 ```{r}
 md <- get_acs(geography = "county",
@@ -156,10 +155,10 @@ md %>%
 As you can see, some of the error bars are quite wide. Some are narrow. But if the bars overlap, it means the difference between the two counties is within the margin of error, and the differences aren't statistically significant.
 
 Is the difference between Calvert and Montgomery significant?
-**Answer**
+**Answer** No, the difference between Calvert and Montgomery is not significant. 
 
 Is the difference between Howard and everyone else significant?
-**Answer**
+**Answer** Yes, the difference between Howard and everyone else is significant.
 
 ### Task 7: Joining Multiple Years Together
 
@@ -184,8 +183,7 @@ md10 <- get_acs(geography = "county",
 What we're going to do next is a lot, but each step is simple. We're going to join the data together, so each county has one line of data. Then we're going to rename some fields that repeat. Then we're going to calculate the minimum and maximum value of the estimate using the margin of error. That'll help us later. After that, we're going to calculate a percent change and sort it by that change.
 
 **Task** Run the following codeblock to join the data, rename the population estimates and then calculate the values we need. Notice how we select _after_ we do the initial calculations so we only see the columns we're interested in (and drop the ones we don't want to see). Also note how the select function has the minus sign (-) in front of some columns? That means we don't want to see them in our result. Which counties saw their median incomes fall from 2010-2019? Is the change outside the margin of error for both?
-**Answer**
-
+**Answer** Somerset County and Caroline County saw their median incomes fall from 2010-2019. Yes the change is outside the margin of error for both. 
 ```{r}
 md10 %>%
   inner_join(md19, by=c("GEOID", "NAME")) %>%
@@ -220,7 +218,7 @@ top_zips <- maryland_ppp %>%
 ```
 
 **Task** Let's get ZCTA household income data from the ACS using tidycensus for the top zip code in `top_zips`. Run the following codeblock to retrieve household income data for all Maryland ZCTAs first, then join them to `top_zips` using the GEOID column. Of the 20 zip codes with the largest amounts, which ones have estimated median household incomes of less than $50,000?
-**Answer**
+**Answer** none of the 20 zip codes with the largest amounts have estimated median household incomes less than 50,000 dollars. 
 
 ```{r}
 md_zipcodes <- get_acs(geography="zcta", variables = "B19013_001", state='MD')
